--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page-wrapper"> 
   <div class="output-wrapper">
-    test
+    test is cools
   </div>
   <div class="spacer"></div>
   <div class="input-wrapper">
