Materials button and scroll fixed

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div class="spacer"></div>
   <div class="input-wrapper">
     <input class="input-box" type="text" placeholder="message">
-    <button class="input-button" type="button">SEND</button>
+    <button md-button>SEND</button>
   </div>
 </div>
 
