--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,7 +1,3 @@
-
-.page-wrapper{
-}
-
 .output-wrapper{
   height: 90vh;
   width: 99vw;
@@ -27,4 +23,8 @@
 
 .input-button{
   width: 5vw;
+}
+
+.page-wrapper {
+  overflow: hidden;
 }
